--- a/app/institucional/institucional.html
+++ b/app/institucional/institucional.html
@@ -247,6 +247,106 @@
                             </p>
                         </div>
                     </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac3" type="checkbox" class="acordeon-title-check">
+                            <label for="ac3"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac4" type="checkbox" class="acordeon-title-check">
+                            <label for="ac4"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac5" type="checkbox" class="acordeon-title-check">
+                            <label for="ac5"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac6" type="checkbox" class="acordeon-title-check">
+                            <label for="ac6"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac7" type="checkbox" class="acordeon-title-check">
+                            <label for="ac7"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac8" type="checkbox" class="acordeon-title-check">
+                            <label for="ac8"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac9" type="checkbox" class="acordeon-title-check">
+                            <label for="ac9"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac10" type="checkbox" class="acordeon-title-check">
+                            <label for="ac10"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac11" type="checkbox" class="acordeon-title-check">
+                            <label for="ac11"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac12" type="checkbox" class="acordeon-title-check">
+                            <label for="ac12"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
 
