--- a/app/institucional/institucional.html
+++ b/app/institucional/institucional.html
@@ -240,110 +240,100 @@
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac2" type="checkbox" class="acordeon-title-check">
-                            <label for="ac2"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac2"  class="acordeon-title-label">MEDIO AMBIENTE, SEGURIDAD E HIGIENE</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Analiza y promueve políticas relacionadas a: determinación de impacto ambiental, seguridad e higiene. Categorización, tramitación de certificados de aptitud ambiental, relación con el Organismo Provincial para el Desarrollo Sostenible.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac3" type="checkbox" class="acordeon-title-check">
-                            <label for="ac3"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac3"  class="acordeon-title-label">EDUCACION</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios en relación a: programas para la determinación de demandas educativas, capacitación para el uso de nuevas tecnologías y para tecnologías convencionales, formación de dirigentes, talleres de investigación y desarrollo.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac4" type="checkbox" class="acordeon-title-check">
-                            <label for="ac4"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac4"  class="acordeon-title-label">JOVENES EMPRESARIOS</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Agrupa a  jóvenes con vocación empresarial con el objeto de crear un espacio para el intercambio de experiencias e ideas. Capacita e incentiva a los jóvenes en la creación de sus propios emprendimientos. Promueve la asociatividad y la complementación de los jóvenes entre diferentes sectores del ámbito empresarial. Organiza y participa de encuentros, seminarios y talleres.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac5" type="checkbox" class="acordeon-title-check">
-                            <label for="ac5"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac5"  class="acordeon-title-label">CALIDAD</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios y promueve políticas relacionadas a: aseguramiento de la calidad, gestión de calidad, costo de la no calidad, auditorías de calidad, normas ISO.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac6" type="checkbox" class="acordeon-title-check">
-                            <label for="ac6"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac6"  class="acordeon-title-label">JURÍDICO</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios y promueve políticas relacionadas a: constitución y adecuación de sociedades, contrataciones, manuales de procedimiento, relaciones entre empresas, marcas y patentes, inscripciones, registros, medios alternativos de resolución de conflictos.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac7" type="checkbox" class="acordeon-title-check">
-                            <label for="ac7"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac7"  class="acordeon-title-label">IMPOSITIVO</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios y promueve políticas relacionadas a: leyes y resoluciones, relaciones con AFIP y ARBA.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac8" type="checkbox" class="acordeon-title-check">
-                            <label for="ac8"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac8"  class="acordeon-title-label">ENERGÍA Y SERVICIOS</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios y promueve políticas  relacionadas a: racionalización del consumo de energía eléctrica y gas, análisis de precios y proyecciones de demanda,  administración de contratos, evaluación de proyectos de energía, legislación energética ambiental, combustibles alternativos de bajo costo.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac9" type="checkbox" class="acordeon-title-check">
-                            <label for="ac9"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac9"  class="acordeon-title-label">PyME</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Asesora a los socios  y promueve políticas relacionadas a regímenes de promoción, subvenciones, desarrollo de la competitividad, recursos financieros, gerenciamiento.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac10" type="checkbox" class="acordeon-title-check">
-                            <label for="ac10"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac10"  class="acordeon-title-label">RELACIONES INSTITUCIONALES</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Promueve la vinculación de la entidad con organismos e instituciones públicas, privadas, nacionales e internacionales.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac11" type="checkbox" class="acordeon-title-check">
-                            <label for="ac11"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac11"  class="acordeon-title-label">AGROINDUSTRIA</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                Promueve el crecimiento del sector, asesora a los socios  y propone políticas relacionadas a regímenes de promoción, subvenciones, desarrollo de la competitividad, recursos financieros, gerenciamiento y comercio exterior.
                             </p>
                         </div>
                     </div>
                     <div class="acordeon-line">
                         <div class="acordeon-block">
                             <input id="ac12" type="checkbox" class="acordeon-title-check">
-                            <label for="ac12"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <label for="ac12"  class="acordeon-title-label">DESARROLLO PRODUCTIVO</label>
                             <p  class="acordeon-text">
-                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
-                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                                El Departamento Desarrollo Productivo comenzó a funcionar a fines del año 2012, con el objetivo de ser la herramienta ejecutora de la visión que la Institución ha mantenido en forma histórica, generar trabajo genuino.
+                                Dicho departamento actúa sobre dos ejes claramente definidos: por un lado los programas estratégicos y por otro, la formulación de proyectos para acceder a fondos de promoción productiva e innovación tecnológica de distintos organismos.
                             </p>
                         </div>
                     </div>
