--- a/app/index.html
+++ b/app/index.html
@@ -499,9 +499,7 @@
 
 <div id="contacto">
 
-    <h2>Administración: Tel.: 0221 423 - 4505 - Depto. de Desarrollo Productivo: Tel.: 0221 422 - 3916 -
-
-        uiglp@uiglp.org.ar - administracion@uiglp.org.ar</h2>
+    <h2>0221 423 - 4505 / 0221 422 - 3916 / uiglp@uiglp.org.ar - administracion@uiglp.org.ar</h2>
 
 </div>
 
