--- a/app/index.html
+++ b/app/index.html
@@ -405,13 +405,51 @@
 
                     <div class="menu-desktop-btn ac-ripple"
 
-                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf(link.nombre) > -1 }"
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('INICIO') > -1 }"
 
-                         ripple-color="#ffffff"
+                         ng-click="appCtrl.goTo({nombre: 'INICIO', path: '/'});"> INICIO
 
-                         ng-repeat="link in appCtrl.links"
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
 
-                         ng-click="appCtrl.goTo(link);"> {{link.nombre}}
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('INSTITUCIONAL') > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'INSTITUCIONAL', path: '/institucional'});"> INSTITUCIONAL
+
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
+
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('BUSQUEDA LABORAL') > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'BUSQUEDA LABORAL', path: '/busquedas_laborales'});"> BUSQUEDA LABORAL
+
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
+
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('NOTICIAS') > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias/0'});"> NOTICIAS
+
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
+
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('CONTACTO') > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'CONTACTO', path: '/contacto'});"> CONTACTO
+
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
+
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('REVISTA') > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'REVISTA', path: '/revistas'});"> REVISTA
+
+                    </div>
+                    <div class="menu-desktop-btn ac-ripple"
+
+                         ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf(appCtrl.links[6].nombre) > -1 }"
+
+                         ng-click="appCtrl.goTo({nombre: 'INGRESO', path: '/ingreso'});">{{appCtrl.links[6].nombre}}
 
                     </div>
 
@@ -499,7 +537,7 @@
 
 <div id="contacto">
 
-    <h2>0221 423 - 4505 / 0221 422 - 3916 | uiglp@uiglp.org.ar - administracion@uiglp.org.ar</h2>
+    <h2>0221 423 - 4505 / 0221 422 - 3916 / uiglp@uiglp.org.ar - administracion@uiglp.org.ar</h2>
 
 </div>
 
