--- a/app/index.html
+++ b/app/index.html
@@ -346,6 +346,7 @@
         $script.ready('primero', function () {
 
                     $script([
+                        'fface.min.js',
                         'bower_components/angular-route/angular-route.min.js',
                         'bower_components/oclazyload/dist/ocLazyLoad.min.js',
                         'bower_components/angular-cookies/angular-cookies.min.js',
@@ -620,6 +621,7 @@
 <!--<script src="contacto/contacto.min.js"></script>-->
 
 <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
+
 
 </body>
 </html>
