--- a/app/index.html
+++ b/app/index.html
@@ -621,7 +621,7 @@
 <!--<script src="contacto/contacto.min.js"></script>-->
 
 <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
-
+<div id="fb-root"></div>
 
 </body>
 </html>
