--- a/app/index.html
+++ b/app/index.html
@@ -346,7 +346,6 @@
         $script.ready('primero', function () {
 
                     $script([
-                        'fface.min.js',
                         'bower_components/angular-route/angular-route.min.js',
                         'bower_components/oclazyload/dist/ocLazyLoad.min.js',
                         'bower_components/angular-cookies/angular-cookies.min.js',
@@ -622,6 +621,16 @@
 
 <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
 <div id="fb-root"></div>
-
+<script>
+    (function (d, s, id) {
+        console.log('entra');
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.5";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
